Apache Tez Change Log
=====================


Release 0.8.1: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:
  TEZ-1788. Allow vertex level disabling of speculation
  TEZ-2868. Fix setting Caller Context in Tez Examples.
  TEZ-2860. NPE in DAGClientImpl.
  TEZ-2855. Fix a potential NPE while routing VertexManager events.
  TEZ-2758. Remove append API in RecoveryService after TEZ-1909.
  TEZ-2851. Support a way for upstream applications to pass in a caller context to Tez.
  TEZ-2859. TestMergeManager.testLocalDiskMergeMultipleTasks failing
  TEZ-2858. Stop using System.currentTimeMillis in TestInputReadyTracker.
  TEZ-2857. Fix flakey tests in TestDAGImpl.
  TEZ-2836. Avoid setting framework/system counters for tasks running in threads.
  TEZ-2398. Flaky test: TestFaultTolerance
  TEZ-2833. Dont create extra directory during ATS file download
  TEZ-2834. Make Tez preemption resilient to incorrect free resource reported
  by YARN
  TEZ-2775. Improve and consolidate logging in Runtime components.
  TEZ-2097. TEZ-UI Add dag logs backend support
  TEZ-2812. Preemption sometimes does not respect heartbeats between preemptions
  TEZ-814.  Improve heuristic for determining a task has failed outputs
  TEZ-2832. Support tests for both SimpleHistory logging and ATS logging
  TEZ-2827. Increase timeout for TestFetcher testInputAttemptIdentifierMap
  TEZ-2774. Improvements and cleanup of logging for the AM and parts of the runtme.
  TEZ-2825. Report progress in terms of completed tasks to reduce load on AM for Tez UI
  TEZ-2812. Tez UI: Update task & attempt tables while in progress.
  TEZ-2786. Tez UI: Update vertex, task & attempt details page while in progress.
  TEZ-2612. Support for showing allocation delays due to internal preemption
  TEZ-2808. Race condition between preemption and container assignment
  TEZ-2807. Log data in the finish event instead of the start event
  TEZ-2799. SimpleHistoryParser NPE
  TEZ-2643. Minimize number of empty spills in Pipelined Sorter